<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Product Locator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wonachSuchen">Wonach suchen Sie?</string>
    <string name="reset">Reset</string>
    <string name="title_activity_anzeige">Anzeige</string>
    <string name="gefunden">gefunden</string>
    <string name="title_activity_kompass_anzeige">KompassAnzeige</string>
    <string name="beenden">Beenden</string>
    <string name="explanation">Super! NFC ist eingeschaltet</string>
    <string name="artikel_quantity">30</string>
    <string name="artikel_name">artikel</string>
    <string name="artikel_cost">10.00</string>
    <string name="artikel_name_ue">Artikel</string>
    <string name="artikel_cost_ue">Preis</string>
    <string name="artikel_quantity_ue">Menge</string>
    <string name="suchen_button">suchen</string>
    <string name="select_all">Tabelleninhalt:</string>
    <string name="Datenbank">Datenbank</string>
    <string name="DbButton">Tabelleninhalt anzeigen</string>
    <string name="nfc">NFC</string>
    <string name="delete_button">Löschen</string>
    <string name="deleteAll_button">Alles Löschen</string>
    <string name="SieSuchtenNach">Sie haben gesucht:</string>
    <string name="SmartphoneAnPreisschild">Bitte halten Sie Ihr Smartphone an ein Preisschild Ihrer Wahl!</string>
    
</resources>
