<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ArtikelAnzeigen" >

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textCost"
        android:layout_alignBottom="@+id/textCost"
        android:layout_marginLeft="68dp"
        android:layout_toRightOf="@+id/textCost"
        android:text="@string/artikel_quantity" />

    <TextView
        android:id="@+id/textCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textName"
        android:layout_alignBottom="@+id/textName"
        android:layout_marginLeft="45dp"
        android:layout_toRightOf="@+id/textName"
        android:text="@string/artikel_cost" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/artikel_name" />

    <TextView
        android:id="@+id/artikel_cost_ue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/artikel_name_ue"
        android:layout_alignBottom="@+id/artikel_name_ue"
        android:layout_alignLeft="@+id/textCost"
        android:text="@string/artikel_cost_ue" />

    <TextView
        android:id="@+id/artikel_name_ue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textCost"
        android:layout_alignLeft="@+id/textName"
        android:layout_marginBottom="14dp"
        android:text="@string/artikel_name_ue" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/artikel_cost_ue"
        android:layout_alignBottom="@+id/artikel_cost_ue"
        android:layout_alignLeft="@+id/textQuantity"
        android:text="@string/artikel_quantity_ue" />

</RelativeLayout>