
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Anzeige" >

    <!-- Hier wird angezeigt, was passend in der Datenbank gefunden wurde -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SieSuchtenNach" />
    
   <!-- Hier wird reingeschrieben, ob NFC eingeschaltet ist, oder nicht -->

    <!-- Nach Auswahl der gefundenen Lösung: Start der Kompassführung -->

    <TextView
        android:id="@+id/NFC_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:text="@string/explanation" />

    <TextView
        android:id="@+id/NFCAnzeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NFC_View"
        android:layout_below="@+id/NFC_View"
        android:layout_marginTop="34dp"
        android:text="@string/SmartphoneAnPreisschild" />

    <Button
        android:id="@+id/hinwollen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NFCAnzeige"
        android:layout_below="@+id/NFCAnzeige"
        android:layout_marginTop="19dp"
        android:text="Auf geht's!" />

    <TextView
        android:id="@+id/GesuchterArtikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/hinwollen"
        android:text="TextView" />

</RelativeLayout>